# hn-digest

./: .env  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  cli.py  pyproject.toml
data/digests/: 2026-02-13.json  2026-02-14.json  2026-03-14.json  2026-04-02.json
docs/: index.html
docs/data/: dates.json
docs/data/digests/: 2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json
src/: __init__.py  main.py  scraper.py  storage.py  summarizer.py
